--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -17,4 +17,4 @@
 <!-- 編集フォーム　-->
 	<%= link_to "Show", book_path(@book), class: "show_#{@book.id}"%>
 	<span>|</span>
-	<%= link_to "Back", new_book_path, class: "Back" %>
+	<%= link_to "Back", new_book_path, class: "back" %>
