--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -10,4 +10,4 @@
 
 <%= link_to "Edit", edit_book_path(@book), class: "edit_#{@book.id}"%>
 <span>|</span>
-<%= link_to "Back", new_book_path, class: "Back" %>
+<%= link_to "Back", new_book_path, class: "back" %>
